2007-07-12  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProjectConfiguration.cs: Fixed a bug which was causing the
	  app to go into an infinite loop.

2007-07-12  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProjectServiceExtension.cs: Removed the need to invoke bash
	  when removing object code files.
	* Compiler/GNUCompiler.cs: Small fixes.

2007-07-12  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProjectConfiguration.cs, Project/CProject.cs,
	  Compiler/GNUCompiler.cs: Inplemented support for precompiled header
	  files in gcc and g++.
	* CBinding.addin.xml: Fixed something I had broken.

2007-07-10  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/ProjectNodeBuilderExtension.cs,
	  Navigation/ClassPadEventArgs.cs, Project/CProject.cs, Makefile.am,
	  CBinding.addin.xml, icons/update,
	  ProjectPad/ProjectPackagesFolderNodeBuilder.cs, CBinding.mdp: The
	  class pad tree is now built in a seperate thread so it does not
	  block the UI while it is being built.

2007-07-07  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/GlobalsNodeBuilder.cs: Fixes class pad bug when there are
	  multiple C projects open.

2007-07-06  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/StructureNodeBuilder.cs, Navigation/ClassNodeBuilder.cs:
	  The "Show Public Api Only" class pad option is now considered.

2007-07-06  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/ProjectNodeBuilderExtension.cs,
	  Navigation/TagDatabaseManager.cs, Navigation/GlobalsNodeBuilder.cs:
	  Undid the work I had started on getting the tree built in the
	  background because I have to think more about how I'm going to
	  implement that.

2007-07-05  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Navigation/ProjectNodeBuilderExtension.cs,
	  Navigation/LanguageItemEventArgs.cs,
	  Navigation/TagDatabaseManager.cs,
	  Navigation/ProjectNavigationInformation.cs,